
	* lib/php.cygclass: Adapt for fixed PHP build system.

	* bin/prep_libtool_modules.sh:
	Check that library was properly installed.
	Simplify code and add comments.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/php.cygclass: New cygclass for PHP PECL extensions.

	* lib/gtk2-perl.cygclass:
	Recognize CPAN_AUTHOR for modules not on sf.net (Gtk2-Notify, Goo-Canvas).
	Set correct ldflags for Goo-Canvas.

	* bin/newmenu: Fix installation directory.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/R.cygclass: New cygclass for CRAN packages.

	* bin/doman: Accept --lang=xx (-l xx) to install NLS manpages.

	* data/mirrors (mirror_cran): Added.

	* bin/prep_gconf_schemas.sh: Get GCONF_CONFIG_SOURCE from gconftool-2.

	* lib/xorg.cygclass: pixman is in lib/.

	* bin/*, lib/*: Fix whitepsace.  for a in $@ -> for a.

	* data/cygport.nanorc: Highlight trailing whitespace (from c.nanorc).

	* lib/utils.cygport (check_header, check_lib):
	More robust; searches gcc dirs; additional dirs added with -I and -L.

	* bin/cygport.in (cygcmake): Fixed typo.

	* CYGWIN-PATCHES/README:
	* bin/Makefile.am:
	* bin/newsbin:  Added newsbin().

	* bin/cygport.in (__pkg_diff):
	Accept RESTRICT=diff to skip .src.patch creation.

	* lib/gst-plugins0.10.cygclass: Update for good .6 and bad .5.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.5 ***

	* CYGWIN-PATCHES/README:
	* configure.ac:
	* NEWS:
	Pre-release version bump to reflect numerous changes.

	* lib/svn.cygclass: SVN_TAG now accepted.
	SVN_BRANCH requires 'full' path (including branches/).

	* lib/mono.cygclass: MONO_SOURCE_TYPE defaults to tar.bz2.

	* lib/gnome.org.cygclass: Don't override preset {CVS,SVN}_URI.

	* bin/cygport.in (unpack): Handle .gem with 'gem unpack'.
	(cygautoreconf): Handle foo.out:foo.in syntax during writability check.

	* lib/gst-plugins0.10.cygclass: Accomodate farsight optional features.

	* lib/gtkmm.cygclass (gtkmm_autoreconf):